# CPP_Engine

./: Build.bat  Build.sh  CMakeLists.txt
shaders/: grid.frag  grid.vert  pathtracer.frag
shaders/primitive/: wireframe.vert
src/: main.cpp
src/core/: Application.cpp  Application.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Time.cpp  Time.h  Window.cpp  Window.h
src/editor/: Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  SelectionManager.cpp  SelectionManager.h  TransformGizmo.cpp  TransformGizmo.h
src/gui/: ContentBrowser.cpp  ContentBrowser.h  DetailsPanel.cpp  DetailsPanel.h  GUI.cpp  GUI.h  Inspector.cpp  Inspector.h  LogWindow.cpp  LogWindow.h  SceneOutliner.cpp  SceneOutliner.h  StatusBar.cpp  StatusBar.h  ToolBar.cpp  ToolBar.h  Viewport.cpp  Viewport.h
src/math/: Mat4.h  Math.cpp  Math.h  Ray.cpp  Ray.h  Vec2.h  Vec3.h
src/renderer/: Framebuffer.cpp  Framebuffer.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/scene/: Camera.cpp  Camera.h  Material.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
src/utils/: FileWatcher.cpp  FileWatcher.h  Random.cpp  Random.h  ResourceManager.cpp  ResourceManager.h
